[gd_scene load_steps=7 format=2]

[ext_resource path="res://entities/units/enemies/enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://entities/units/enemies/boss/boss.gd" type="Script" id=2]
[ext_resource path="res://ui/hud/ui_progress_bar.tscn" type="PackedScene" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 40.0

[sub_resource type="CircleShape2D" id=2]
radius = 32.0

[sub_resource type="CircleShape2D" id=3]
radius = 16.0312

[node name="Boss" instance=ExtResource( 1 )]
mass = 100.0
script = ExtResource( 2 )

[node name="Collision" parent="." index="1"]
shape = SubResource( 1 )

[node name="Collision" parent="Hurtbox" index="0"]
shape = SubResource( 2 )

[node name="Collision" parent="Hitbox" index="0"]
shape = SubResource( 3 )

[node name="States" type="Node2D" parent="." index="10"]

[node name="CheckStateTimer" type="Timer" parent="." index="11"]
unique_name_in_owner = true
autostart = true

[node name="LifeBar" parent="." index="12" instance=ExtResource( 4 )]
margin_left = -32.0
margin_top = -72.0
margin_right = 32.0
margin_bottom = -56.0
nine_patch_stretch = true
progress_color = Color( 0.721569, 0, 0, 1 )

[connection signal="timeout" from="CheckStateTimer" to="." method="_on_CheckStateTimer_timeout"]

[editable path="Hurtbox"]
[editable path="Hitbox"]
